feat: adicionado novas funcoes para crud de usuarios
